# geno-notes

./: .geno-agents  CLAUDE.md  GENO.md  README.md  SKILL.md  genotools.yaml  install.sh  mkdocs.yml  package.json  pyproject.toml
.github/workflows/: pages.yml
.specs/: GOALS.md  TENETS.md  VISION.md
commands/: gt-notes.md
docs/: commands.md  getting-started.md  index.html  index.md
docs/overrides/partials/: announce.html
docs/sources/: karpathy-llm-wiki.md
docs/stylesheets/: extra.css
geno_notes/: __init__.py  cli.py  config.py  events.py  ids.py  indexer.py  journal.py  locks.py  paths.py  search.py  site.py  tasks.py  vault.py
skills/geno-notes/: SKILL.md
skills/geno-notes-sites-generate/: SKILL.md
skills/geno-notes-vault-generate/: SKILL.md
skills/geno-notes-wiki-compile/: SKILL.md
skills/geno-notes-wiki-lint/: SKILL.md
tests/: conftest.py  test_ids.py  test_journal.py  test_locks.py  test_paths.py  test_scope.py  test_tasks.py
